[project]
name = "fcp-replace-asset-clip"
version = "0.0.1"
authors = [
  { name="Sugil Steve Lee", email="sugilmath@gmail.com" },
]
description = "The built-in FCP asset-clip replacement is not ideal when there's a .01 difference in the imported fps value (even if you assure that the original asset and the replacing asset are essentially the same). This happens when you work with media with a variable frame rate (VFR). This tool safely replaces (possibly too many) asset-clips with vfr sources in a Project Timeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fcp-io>=0.0.2",
	"fcp-math>=0.0.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/leesugil/fcp-replace-asset-clip"
Issues = "https://github.com/leesugil/fcp-replace-asset-clip/issues"

[project.scripts]
fcp-replace-asset-clip = "fcp_replace_asset_clip.cli:main"
